--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
     <body>
         <h1>Hello Git</h1>
         <span>Joko widodo</span>
-        <h1>Contoh</h1>
+        <h1>Contoh User 2</h1>
+        <h1>User 2</h1>
     </body>
 </html>
