add user 1 to index.html

--- a/index.html
+++ b/index.html
@@ -2,5 +2,7 @@
     <body>
         <h1>Hello Git</h1>
         <span>Joko widodo</span>
+        <h1>Contoh User1</h1>
+        <h1>User1</h1>
     </body>
 </html>
